RTC5impl.hpp


_declspec(dllimport) void __stdcall n_camming(const UINT CardNo, const UINT FirstPos, const UINT NPos, const UINT No, const UINT Ctrl, const double Scale, const UINT Code);

_declspec(dllimport) void __stdcall save_and_restart_timer(void);

_declspec(dllimport) void __stdcall set_wobbel(const UINT Transversal, const UINT Longitudinal, const double Freq);

_declspec(dllimport) void __stdcall set_wobbel_mode(const UINT Transversal, const UINT Longitudinal, const double Freq, const long Mode);

_declspec(dllimport) void __stdcall set_trigger(const UINT Period, const UINT Signal1, const UINT Signal2);

_declspec(dllimport) void __stdcall set_pixel_line(const UINT Channel, const UINT HalfPeriod, const double dX, const double dY);

_declspec(dllimport) void __stdcall set_n_pixel(const UINT PulseLength, const UINT AnalogOut, const UINT Number);

_declspec(dllimport) void __stdcall set_pixel(const UINT PulseLength, const UINT AnalogOut);

_declspec(dllimport) void __stdcall rs232_write_text_list(const char* pData);

_declspec(dllimport) void __stdcall set_mcbsp_out(const UINT Signal1, const UINT Signal2);

_declspec(dllimport) void __stdcall camming(const UINT FirstPos, const UINT NPos, const UINT No, const UINT Ctrl, const double Scale, const UINT Code);

_declspec(dllimport) void __stdcall n_timed_mark_abs_3d(const UINT CardNo, const long X, const long Y, const long Z, const double T);

_declspec(dllimport) void __stdcall n_timed_mark_rel_3d(const UINT CardNo, const long dX, const long dY, const long dZ, const double T);

_declspec(dllimport) void __stdcall n_timed_mark_abs(const UINT CardNo, const long X, const long Y, const double T);

_declspec(dllimport) void __stdcall n_timed_mark_rel(const UINT CardNo, const long dX, const long dY, const double T);

_declspec(dllimport) void __stdcall timed_mark_abs_3d(const long X, const long Y, const long Z, const double T);

_declspec(dllimport) void __stdcall timed_mark_rel_3d(const long dX, const long dY, const long dZ, const double T);

_declspec(dllimport) void __stdcall timed_mark_abs(const long X, const long Y, const double T);

_declspec(dllimport) void __stdcall timed_mark_rel(const long dX, const long dY, const double T);

_declspec(dllimport) void __stdcall n_mark_abs_3d(const UINT CardNo, const long X, const long Y, const long Z);

_declspec(dllimport) void __stdcall n_mark_rel_3d(const UINT CardNo, const long dX, const long dY, const long dZ);

_declspec(dllimport) void __stdcall n_mark_abs(const UINT CardNo, const long X, const long Y);

_declspec(dllimport) void __stdcall n_mark_rel(const UINT CardNo, const long dX, const long dY);

_declspec(dllimport) void __stdcall mark_abs_3d(const long X, const long Y, const long Z);

_declspec(dllimport) void __stdcall mark_rel_3d(const long dX, const long dY, const long dZ);

_declspec(dllimport) void __stdcall mark_abs(const long X, const long Y);

_declspec(dllimport) void __stdcall mark_rel(const long dX, const long dY);

_declspec(dllimport) void __stdcall n_timed_jump_abs_3d(const UINT CardNo, const long X, const long Y, const long Z, const double T);

_declspec(dllimport) void __stdcall n_timed_jump_rel_3d(const UINT CardNo, const long dX, const long dY, const long dZ, const double T);

_declspec(dllimport) void __stdcall n_timed_jump_abs(const UINT CardNo, const long X, const long Y, const double T);

_declspec(dllimport) void __stdcall n_timed_jump_rel(const UINT CardNo, const long dX, const long dY, const double T);

_declspec(dllimport) void __stdcall timed_jump_abs_3d(const long X, const long Y, const long Z, const double T);

_declspec(dllimport) void __stdcall timed_jump_rel_3d(const long dX, const long dY, const long dZ, const double T);

_declspec(dllimport) void __stdcall timed_jump_abs(const long X, const long Y, const double T);

_declspec(dllimport) void __stdcall timed_jump_rel(const long dX, const long dY, const double T);

_declspec(dllimport) void __stdcall n_jump_abs_3d(const UINT CardNo, const long X, const long Y, const long Z);

_declspec(dllimport) void __stdcall n_jump_rel_3d(const UINT CardNo, const long dX, const long dY, const long dZ);

_declspec(dllimport) void __stdcall n_jump_abs(const UINT CardNo, const long X, const long Y);

_declspec(dllimport) void __stdcall n_jump_rel(const UINT CardNo, const long dX, const long dY);

_declspec(dllimport) void __stdcall jump_abs_3d(const long X, const long Y, const long Z);

_declspec(dllimport) void __stdcall jump_rel_3d(const long dX, const long dY, const long dZ);

_declspec(dllimport) void __stdcall jump_abs(const long X, const long Y);

_declspec(dllimport) void __stdcall jump_rel(const long dX, const long dY);

_declspec(dllimport) void __stdcall n_para_mark_abs_3d(const UINT CardNo, const long X, const long Y, const long Z, const UINT P);

_declspec(dllimport) void __stdcall n_para_mark_rel_3d(const UINT CardNo, const long dX, const long dY, const long dZ, const UINT P);

_declspec(dllimport) void __stdcall n_para_mark_abs(const UINT CardNo, const long X, const long Y, const UINT P);

_declspec(dllimport) void __stdcall n_para_mark_rel(const UINT CardNo, const long dX, const long dY, const UINT P);

_declspec(dllimport) void __stdcall para_mark_abs_3d(const long X, const long Y, const long Z, const UINT P);

_declspec(dllimport) void __stdcall para_mark_rel_3d(const long dX, const long dY, const long dZ, const UINT P);

_declspec(dllimport) void __stdcall para_mark_abs(const long X, const long Y, const UINT P);

_declspec(dllimport) void __stdcall para_mark_rel(const long dX, const long dY, const UINT P);

_declspec(dllimport) void __stdcall n_para_jump_abs_3d(const UINT CardNo, const long X, const long Y, const long Z, const UINT P);

_declspec(dllimport) void __stdcall n_para_jump_rel_3d(const UINT CardNo, const long dX, const long dY, const long dZ, const UINT P);

_declspec(dllimport) void __stdcall n_para_jump_abs(const UINT CardNo, const long X, const long Y, const UINT P);

_declspec(dllimport) void __stdcall n_para_jump_rel(const UINT CardNo, const long dX, const long dY, const UINT P);

_declspec(dllimport) void __stdcall para_jump_abs_3d(const long X, const long Y, const long Z, const UINT P);

_declspec(dllimport) void __stdcall para_jump_rel_3d(const long dX, const long dY, const long dZ, const UINT P);

_declspec(dllimport) void __stdcall para_jump_abs(const long X, const long Y, const UINT P);

_declspec(dllimport) void __stdcall para_jump_rel(const long dX, const long dY, const UINT P);

_declspec(dllimport) void __stdcall n_timed_para_mark_abs_3d(const UINT CardNo, const long X, const long Y, const long Z, const UINT P, const double T);

_declspec(dllimport) void __stdcall n_timed_para_mark_rel_3d(const UINT CardNo, const long dX, const long dY, const long dZ, const UINT P, const double T);

_declspec(dllimport) void __stdcall n_timed_para_jump_abs_3d(const UINT CardNo, const long X, const long Y, const long Z, const UINT P, const double T);

_declspec(dllimport) void __stdcall n_timed_para_jump_rel_3d(const UINT CardNo, const long dX, const long dY, const long dZ, const UINT P, const double T);

_declspec(dllimport) void __stdcall n_timed_para_mark_abs(const UINT CardNo, const long X, const long Y, const UINT P, const double T);

_declspec(dllimport) void __stdcall n_timed_para_mark_rel(const UINT CardNo, const long dX, const long dY, const UINT P, const double T);

_declspec(dllimport) void __stdcall n_timed_para_jump_abs(const UINT CardNo, const long X, const long Y, const UINT P, const double T);

_declspec(dllimport) void __stdcall n_timed_para_jump_rel(const UINT CardNo, const long dX, const long dY, const UINT P, const double T);

_declspec(dllimport) void __stdcall timed_para_mark_abs_3d(const long X, const long Y, const long Z, const UINT P, const double T);

_declspec(dllimport) void __stdcall timed_para_mark_rel_3d(const long dX, const long dY, const long dZ, const UINT P, const double T);

_declspec(dllimport) void __stdcall timed_para_jump_abs_3d(const long X, const long Y, const long Z, const UINT P, const double T);

_declspec(dllimport) void __stdcall timed_para_jump_rel_3d(const long dX, const long dY, const long dZ, const UINT P, const double T);

_declspec(dllimport) void __stdcall timed_para_mark_abs(const long X, const long Y, const UINT P, const double T);

_declspec(dllimport) void __stdcall timed_para_mark_rel(const long dX, const long dY, const UINT P, const double T);

_declspec(dllimport) void __stdcall timed_para_jump_abs(const long X, const long Y, const UINT P, const double T);

_declspec(dllimport) void __stdcall timed_para_jump_rel(const long dX, const long dY, const UINT P, const double T);

_declspec(dllimport) void __stdcall n_set_defocus_list(const UINT CardNo, const long Shift);

_declspec(dllimport) void __stdcall set_defocus_list(const long Shift);

_declspec(dllimport) void __stdcall n_timed_arc_abs(const UINT CardNo, const long X, const long Y, const double Angle, const double T);

_declspec(dllimport) void __stdcall n_timed_arc_rel(const UINT CardNo, const long dX, const long dY, const double Angle, const double T);

_declspec(dllimport) void __stdcall timed_arc_abs(const long X, const long Y, const double Angle, const double T);

_declspec(dllimport) void __stdcall timed_arc_rel(const long dX, const long dY, const double Angle, const double T);

_declspec(dllimport) void __stdcall n_arc_abs_3d(const UINT CardNo, const long X, const long Y, const long Z, const double Angle);

_declspec(dllimport) void __stdcall n_arc_rel_3d(const UINT CardNo, const long dX, const long dY, const long dZ, const double Angle);

_declspec(dllimport) void __stdcall n_arc_abs(const UINT CardNo, const long X, const long Y, const double Angle);

_declspec(dllimport) void __stdcall n_arc_rel(const UINT CardNo, const long dX, const long dY, const double Angle);

_declspec(dllimport) void __stdcall n_set_ellipse(const UINT CardNo, const UINT A, const UINT B, const double Phi0, const double Phi);

_declspec(dllimport) void __stdcall n_mark_ellipse_abs(const UINT CardNo, const long X, const long Y, const double Alpha);

_declspec(dllimport) void __stdcall n_mark_ellipse_rel(const UINT CardNo, const long dX, const long dY, const double Alpha);

_declspec(dllimport) void __stdcall arc_abs_3d(const long X, const long Y, const long Z, const double Angle);

_declspec(dllimport) void __stdcall arc_rel_3d(const long dX, const long dY, const long dZ, const double Angle);

_declspec(dllimport) void __stdcall arc_abs(const long X, const long Y, const double Angle);

_declspec(dllimport) void __stdcall arc_rel(const long dX, const long dY, const double Angle);

_declspec(dllimport) void __stdcall set_ellipse(const UINT A, const UINT B, const double Phi0, const double Phi);

_declspec(dllimport) void __stdcall mark_ellipse_abs(const long X, const long Y, const double Alpha);

_declspec(dllimport) void __stdcall mark_ellipse_rel(const long dX, const long dY, const double Alpha);

_declspec(dllimport) void __stdcall n_set_offset_xyz_list(const UINT CardNo, const UINT HeadNo, const long XOffset, const long YOffset, const long ZOffset, const UINT at_once);

_declspec(dllimport) void __stdcall n_set_offset_list(const UINT CardNo, const UINT HeadNo, const long XOffset, const long YOffset, const UINT at_once);

_declspec(dllimport) void __stdcall n_set_matrix_list(const UINT CardNo, const UINT HeadNo, const UINT Ind1, const UINT Ind2, const double Mij, const UINT at_once);

_declspec(dllimport) void __stdcall n_set_angle_list(const UINT CardNo, const UINT HeadNo, const double Angle, const UINT at_once);

_declspec(dllimport) void __stdcall n_set_scale_list(const UINT CardNo, const UINT HeadNo, const double Scale, const UINT at_once);

_declspec(dllimport) void __stdcall n_apply_mcbsp_list(const UINT CardNo, const UINT HeadNo, const UINT at_once);

_declspec(dllimport) void __stdcall set_offset_xyz_list(const UINT HeadNo, const long XOffset, const long YOffset, const long ZOffset, const UINT at_once);

_declspec(dllimport) void __stdcall set_offset_list(const UINT HeadNo, const long XOffset, const long YOffset, const UINT at_once);

_declspec(dllimport) void __stdcall set_matrix_list(const UINT HeadNo, const UINT Ind1, const UINT Ind2, const double Mij, const UINT at_once);

_declspec(dllimport) void __stdcall set_angle_list(const UINT HeadNo, const double Angle, const UINT at_once);

_declspec(dllimport) void __stdcall set_scale_list(const UINT HeadNo, const double Scale, const UINT at_once);

_declspec(dllimport) void __stdcall apply_mcbsp_list(const UINT HeadNo, const UINT at_once);

_declspec(dllimport) void __stdcall n_set_mark_speed(const UINT CardNo, const double Speed);

_declspec(dllimport) void __stdcall n_set_jump_speed(const UINT CardNo, const double Speed);