RTC5Import.pas

procedure n_camming(CardNo: LongWord; FirstPos: LongWord; NPos: LongWord; No: LongWord; Ctrl: LongWord; Scale: Double; Code: LongWord); stdcall; external RTC5DLL;
procedure save_and_restart_timer(); stdcall; external RTC5DLL;
procedure set_wobbel(Transversal: LongWord; Longitudinal: LongWord; Freq: Double); stdcall; external RTC5DLL;
procedure set_wobbel_mode(Transversal: LongWord; Longitudinal: LongWord; Freq: Double; Mode: LongInt); stdcall; external RTC5DLL;
procedure set_trigger(Period: LongWord; Signal1: LongWord; Signal2: LongWord); stdcall; external RTC5DLL;
procedure set_pixel_line(Channel: LongWord; HalfPeriod: LongWord; dX: Double; dY: Double); stdcall; external RTC5DLL;
procedure set_n_pixel(PulseLength: LongWord; AnalogOut: LongWord; Number: LongWord); stdcall; external RTC5DLL;
procedure set_pixel(PulseLength: LongWord; AnalogOut: LongWord); stdcall; external RTC5DLL;
procedure rs232_write_text_list(pData: PChar); stdcall; external RTC5DLL;
procedure set_mcbsp_out(Signal1: LongWord; Signal2: LongWord); stdcall; external RTC5DLL;
procedure camming(FirstPos: LongWord; NPos: LongWord; No: LongWord; Ctrl: LongWord; Scale: Double; Code: LongWord); stdcall; external RTC5DLL;
procedure n_timed_mark_abs_3d(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt; T: Double); stdcall; external RTC5DLL;
procedure n_timed_mark_rel_3d(CardNo: LongWord; dX: LongInt; dY: LongInt; dZ: LongInt; T: Double); stdcall; external RTC5DLL;
procedure n_timed_mark_abs(CardNo: LongWord; X: LongInt; Y: LongInt; T: Double); stdcall; external RTC5DLL;
procedure n_timed_mark_rel(CardNo: LongWord; dX: LongInt; dY: LongInt; T: Double); stdcall; external RTC5DLL;
procedure timed_mark_abs_3d(X: LongInt; Y: LongInt; Z: LongInt; T: Double); stdcall; external RTC5DLL;
procedure timed_mark_rel_3d(dX: LongInt; dY: LongInt; dZ: LongInt; T: Double); stdcall; external RTC5DLL;
procedure timed_mark_abs(X: LongInt; Y: LongInt; T: Double); stdcall; external RTC5DLL;
procedure timed_mark_rel(dX: LongInt; dY: LongInt; T: Double); stdcall; external RTC5DLL;
procedure n_mark_abs_3d(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt); stdcall; external RTC5DLL;
procedure n_mark_rel_3d(CardNo: LongWord; dX: LongInt; dY: LongInt; dZ: LongInt); stdcall; external RTC5DLL;
procedure n_mark_abs(CardNo: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
procedure n_mark_rel(CardNo: LongWord; dX: LongInt; dY: LongInt); stdcall; external RTC5DLL;
procedure mark_abs_3d(X: LongInt; Y: LongInt; Z: LongInt); stdcall; external RTC5DLL;
procedure mark_rel_3d(dX: LongInt; dY: LongInt; dZ: LongInt); stdcall; external RTC5DLL;
procedure mark_abs(X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
procedure mark_rel(dX: LongInt; dY: LongInt); stdcall; external RTC5DLL;
procedure n_timed_jump_abs_3d(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt; T: Double); stdcall; external RTC5DLL;
procedure n_timed_jump_rel_3d(CardNo: LongWord; dX: LongInt; dY: LongInt; dZ: LongInt; T: Double); stdcall; external RTC5DLL;
procedure n_timed_jump_abs(CardNo: LongWord; X: LongInt; Y: LongInt; T: Double); stdcall; external RTC5DLL;
procedure n_timed_jump_rel(CardNo: LongWord; dX: LongInt; dY: LongInt; T: Double); stdcall; external RTC5DLL;
procedure timed_jump_abs_3d(X: LongInt; Y: LongInt; Z: LongInt; T: Double); stdcall; external RTC5DLL;
procedure timed_jump_rel_3d(dX: LongInt; dY: LongInt; dZ: LongInt; T: Double); stdcall; external RTC5DLL;
procedure timed_jump_abs(X: LongInt; Y: LongInt; T: Double); stdcall; external RTC5DLL;
procedure timed_jump_rel(dX: LongInt; dY: LongInt; T: Double); stdcall; external RTC5DLL;
procedure n_jump_abs_3d(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt); stdcall; external RTC5DLL;
procedure n_jump_rel_3d(CardNo: LongWord; dX: LongInt; dY: LongInt; dZ: LongInt); stdcall; external RTC5DLL;
procedure n_jump_abs(CardNo: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
procedure n_jump_rel(CardNo: LongWord; dX: LongInt; dY: LongInt); stdcall; external RTC5DLL;
procedure jump_abs_3d(X: LongInt; Y: LongInt; Z: LongInt); stdcall; external RTC5DLL;
procedure jump_rel_3d(dX: LongInt; dY: LongInt; dZ: LongInt); stdcall; external RTC5DLL;
procedure jump_abs(X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
procedure jump_rel(dX: LongInt; dY: LongInt); stdcall; external RTC5DLL;
procedure n_para_mark_abs_3d(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure n_para_mark_rel_3d(CardNo: LongWord; dX: LongInt; dY: LongInt; dZ: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure n_para_mark_abs(CardNo: LongWord; X: LongInt; Y: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure n_para_mark_rel(CardNo: LongWord; dX: LongInt; dY: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure para_mark_abs_3d(X: LongInt; Y: LongInt; Z: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure para_mark_rel_3d(dX: LongInt; dY: LongInt; dZ: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure para_mark_abs(X: LongInt; Y: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure para_mark_rel(dX: LongInt; dY: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure n_para_jump_abs_3d(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure n_para_jump_rel_3d(CardNo: LongWord; dX: LongInt; dY: LongInt; dZ: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure n_para_jump_abs(CardNo: LongWord; X: LongInt; Y: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure n_para_jump_rel(CardNo: LongWord; dX: LongInt; dY: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure para_jump_abs_3d(X: LongInt; Y: LongInt; Z: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure para_jump_rel_3d(dX: LongInt; dY: LongInt; dZ: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure para_jump_abs(X: LongInt; Y: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure para_jump_rel(dX: LongInt; dY: LongInt; P: LongWord); stdcall; external RTC5DLL;
procedure n_timed_para_mark_abs_3d(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure n_timed_para_mark_rel_3d(CardNo: LongWord; dX: LongInt; dY: LongInt; dZ: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure n_timed_para_jump_abs_3d(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure n_timed_para_jump_rel_3d(CardNo: LongWord; dX: LongInt; dY: LongInt; dZ: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure n_timed_para_mark_abs(CardNo: LongWord; X: LongInt; Y: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure n_timed_para_mark_rel(CardNo: LongWord; dX: LongInt; dY: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure n_timed_para_jump_abs(CardNo: LongWord; X: LongInt; Y: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure n_timed_para_jump_rel(CardNo: LongWord; dX: LongInt; dY: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure timed_para_mark_abs_3d(X: LongInt; Y: LongInt; Z: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure timed_para_mark_rel_3d(dX: LongInt; dY: LongInt; dZ: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure timed_para_jump_abs_3d(X: LongInt; Y: LongInt; Z: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure timed_para_jump_rel_3d(dX: LongInt; dY: LongInt; dZ: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure timed_para_mark_abs(X: LongInt; Y: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure timed_para_mark_rel(dX: LongInt; dY: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure timed_para_jump_abs(X: LongInt; Y: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure timed_para_jump_rel(dX: LongInt; dY: LongInt; P: LongWord; T: Double); stdcall; external RTC5DLL;
procedure n_set_defocus_list(CardNo: LongWord; Shift: LongInt); stdcall; external RTC5DLL;
procedure set_defocus_list(Shift: LongInt); stdcall; external RTC5DLL;
procedure n_timed_arc_abs(CardNo: LongWord; X: LongInt; Y: LongInt; Angle: Double; T: Double); stdcall; external RTC5DLL;
procedure n_timed_arc_rel(CardNo: LongWord; dX: LongInt; dY: LongInt; Angle: Double; T: Double); stdcall; external RTC5DLL;
procedure timed_arc_abs(X: LongInt; Y: LongInt; Angle: Double; T: Double); stdcall; external RTC5DLL;
procedure timed_arc_rel(dX: LongInt; dY: LongInt; Angle: Double; T: Double); stdcall; external RTC5DLL;
procedure n_arc_abs_3d(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt; Angle: Double); stdcall; external RTC5DLL;
procedure n_arc_rel_3d(CardNo: LongWord; dX: LongInt; dY: LongInt; dZ: LongInt; Angle: Double); stdcall; external RTC5DLL;
procedure n_arc_abs(CardNo: LongWord; X: LongInt; Y: LongInt; Angle: Double); stdcall; external RTC5DLL;
procedure n_arc_rel(CardNo: LongWord; dX: LongInt; dY: LongInt; Angle: Double); stdcall; external RTC5DLL;
procedure n_set_ellipse(CardNo: LongWord; A: LongWord; B: LongWord; Phi0: Double; Phi: Double); stdcall; external RTC5DLL;
procedure n_mark_ellipse_abs(CardNo: LongWord; X: LongInt; Y: LongInt; Alpha: Double); stdcall; external RTC5DLL;
procedure n_mark_ellipse_rel(CardNo: LongWord; dX: LongInt; dY: LongInt; Alpha: Double); stdcall; external RTC5DLL;
procedure arc_abs_3d(X: LongInt; Y: LongInt; Z: LongInt; Angle: Double); stdcall; external RTC5DLL;
procedure arc_rel_3d(dX: LongInt; dY: LongInt; dZ: LongInt; Angle: Double); stdcall; external RTC5DLL;
procedure arc_abs(X: LongInt; Y: LongInt; Angle: Double); stdcall; external RTC5DLL;
procedure arc_rel(dX: LongInt; dY: LongInt; Angle: Double); stdcall; external RTC5DLL;
procedure set_ellipse(A: LongWord; B: LongWord; Phi0: Double; Phi: Double); stdcall; external RTC5DLL;
procedure mark_ellipse_abs(X: LongInt; Y: LongInt; Alpha: Double); stdcall; external RTC5DLL;
procedure mark_ellipse_rel(dX: LongInt; dY: LongInt; Alpha: Double); stdcall; external RTC5DLL;
procedure n_set_offset_xyz_list(CardNo: LongWord; HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; ZOffset: LongInt; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_set_offset_list(CardNo: LongWord; HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_set_matrix_list(CardNo: LongWord; HeadNo: LongWord; Ind1: LongWord; Ind2: LongWord; Mij: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_set_angle_list(CardNo: LongWord; HeadNo: LongWord; Angle: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_set_scale_list(CardNo: LongWord; HeadNo: LongWord; Scale: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_apply_mcbsp_list(CardNo: LongWord; HeadNo: LongWord; at_once: LongWord); stdcall; external RTC5DLL;
procedure set_offset_xyz_list(HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; ZOffset: LongInt; at_once: LongWord); stdcall; external RTC5DLL;
procedure set_offset_list(HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; at_once: LongWord); stdcall; external RTC5DLL;
procedure set_matrix_list(HeadNo: LongWord; Ind1: LongWord; Ind2: LongWord; Mij: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure set_angle_list(HeadNo: LongWord; Angle: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure set_scale_list(HeadNo: LongWord; Scale: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure apply_mcbsp_list(HeadNo: LongWord; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_set_mark_speed(CardNo: LongWord; Speed: Double); stdcall; external RTC5DLL;
procedure n_set_jump_speed(CardNo: LongWord; Speed: Double); stdcall; external RTC5DLL;
